# LiDAR-Project

./: README.md
devel/: .catkin  _setup_util.py  local_setup.sh  setup.sh
devel/include/olei_msgs/: oleiPacket.h  oleiScan.h
devel/include/olelidar/: oleiPuckConfig.h
devel/lib/olelidar/: olelidar_decoder  olelidar_subscriber_node  subscriber_node
devel/lib/pkgconfig/: olei_msgs.pc  olelidar.pc
devel/lib/python3/dist-packages/olei_msgs/msg/: __init__.py  _oleiPacket.py  _oleiScan.py
devel/lib/python3/dist-packages/olelidar/cfg/: oleiPuckConfig.py
devel/share/common-lisp/ros/olei_msgs/msg/: _package.lisp  _package_oleiPacket.lisp  _package_oleiScan.lisp  oleiPacket.lisp  oleiScan.lisp  olei_msgs-msg.asd
devel/share/gennodejs/ros/olei_msgs/msg/: _index.js  oleiPacket.js  oleiScan.js
devel/share/olei_msgs/cmake/: olei_msgs-msg-paths.cmake  olei_msgsConfig.cmake
devel/share/olelidar/cmake/: olelidarConfig.cmake
devel/share/olelidar/docs/: oleiPuckConfig-usage.dox  oleiPuckConfig.dox  oleiPuckConfig.wikidoc
devel/share/roseus/ros/olei_msgs/: manifest.l
devel/share/roseus/ros/olei_msgs/msg/: oleiPacket.l  oleiScan.l
rviz/: test.rviz
src/olelidar/: CMakeLists.txt
src/olelidar/cfg/: oleiPuck.cfg
src/olelidar/launch/: driver.launch  scan.launch
src/olelidar/src/: RANSAC_node.cpp  circle_detection.cpp  circle_regression.cpp  denoise.cpp  denoise_node.cpp  detection_node.cpp  driver.cpp  filtering_node.cpp  shape_detection.cpp  subscriber_node.cpp
